intial commit changes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,7 +59,7 @@ section{
 }
 
 @media only screen and (max-width:775px){
-    #sales, #developer{
+    #Cl, #HR, #Co, #Of, #Sa, #In{
         padding: 2rem 2rem;
         width: 85% !important;
     }
