--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,18 @@ section{
     background: $blue;
 }
 
+.card-header[aria-expanded = false]{
+    .fa-chevron-up{
+        display: none;
+    }
+}
+
+.card-header[aria-expanded = true]{
+    .fa-chevron-down{
+        display: none;
+    }
+}
+
 .ribbon{
     background: $blue;
     color: #fff;
@@ -47,7 +59,7 @@ section{
         border-left: 30px solid transparent;
         border-top: 30px solid #0883be;
         left: -0.5px;
-        top: 58.5px;
+        top: 58px;
     }
     &::after{
         border-bottom: 29px solid transparent;
@@ -58,29 +70,83 @@ section{
     }
 }
 
+.paper-clip-icon,
+.paper-clip-icon::after,
+.paper-clip-icon::before {
+    border-color: #777 !important;
+}
+.paper-clip-icon {
+    width: 40px;
+    height: 40px;
+    border-bottom: none;
+    border-left: 6px solid;
+    border-right: 6px solid;
+    border-top: none;
+    position: relative;
+    z-index: 5;
+}
+.paper-clip-icon::before {
+    position: absolute;
+    content: "";
+    top: -30px;
+    right: -6px;
+    width: 29px;
+    height: 60px;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    border-bottom: none;
+    border-left: 6px solid;
+    border-right: 6px solid;
+    border-top: 6px solid;
+}
+.paper-clip-icon::after {
+    position: absolute;
+    content: "";
+    bottom: -80px;
+    right: 5px;
+    width: 18px;
+    height: 104px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    border-top: none;
+    border-left: 6px solid;
+    border-right: 6px solid;
+    border-bottom: 6px solid;
+}
 
 @media only screen and (max-width:775px){
     #Cl, #HR, #Co, #Of, #Sa, #In{
         padding: 2rem 2rem;
-        width: 85% !important;
+        width: 100% !important;
     }
     .ribbon{
-        font-size: 18px;
-        margin: 0 -20px 40px -68px;
-        padding: 15px 50px 15px 68px;
+        position: initial; 
+        font-size: 25px;
+        padding: 0px;
+        margin: 0px;
+        color: black;
+        background: none;
+        font-weight: 500;
+        text-align: center !important;
+
         &::before{
-            border-left: 36px solid transparent;
-            border-top: 30px solid #0883be;
-            left: 0;
-            top: 51px;
+            content: none;
         }
         &::after{
-            border-bottom: 25.5px solid transparent;
-            border-right: 15px solid #fff;
-            border-top: 25.5px solid transparent;
-            right: 0;
-            top: 0;
+            content: none;
         }
+    }
+    .text-middle{
+        text-align: center;
+    }
+
+    .left-text{
+        text-align: left;
+    }
+
+    .number-of-jobs{
+        float: none !important;
+        text-align: center;
     }
 
 }
