--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,15 @@ section{
     background: $blue;
 }
 
+.card{
+    a{
+        text-decoration: none;
+    }
+    .card-body{
+        border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+    }
+}
+
 .card-header[aria-expanded = false]{
     .fa-chevron-up{
         display: none;
